Collapse mode in side menu (fix logo position) #2456

--- a/modules/web/themes/halo/app/app-window.scss
+++ b/modules/web/themes/halo/app/app-window.scss
@@ -333,6 +333,8 @@ $cuba-sidemenu-layout-collapse-animation-time: .4s !default;
         @include transition(width $cuba-sidemenu-layout-collapse-animation-time ease-in-out);
       }
 
+      border-right: 0;
+
       @include cuba-sidemenu-collapsed(false);
     }
 
@@ -368,9 +370,7 @@ $cuba-sidemenu-layout-collapse-animation-time: .4s !default;
 
       height: 40px;
       // consider 1px right border
-      padding: 0 floor(($cuba-sidemenu-layout-collapsed-width - $logo-size - 1px) / 2);
-
-      text-align: left;
+      padding: 0 floor(($cuba-sidemenu-layout-collapsed-width - $logo-size) / 2);
 
       .c-app-icon {
         height: $logo-size;
